improved some ui element

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,5 +1,7 @@
 {
   "shared": {
+    "balance": "Wallet balance:",
+    "allowance": "Spendable limit:",
     "sidebar": {
       "staking": "Staking",
       "staking-conservative": "Conservative",
