added more componenets and improved table

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -65,5 +65,51 @@
         }
       }
     }
+  },
+  "errors": {
+    "PA01": "Bet amount is invalid",
+    "CS01": "Minimum staking amount is 10k BET",
+    "CS03": "Distribution is allowed only on Calculation Time",
+    "CS04": "Stake and Withdraw is disabled on Calculation Time. Please try again later",
+    "CSP05": "Please make a claim before withdrawing",
+    "C06": "Invalid Staking Contract",
+    "C07": "Pass membership is required to stake or make bets",
+    "C08": "Insufficient allowance",
+    "PS03": "Inviter did not met requirements",
+    "PS01": "Wallet already a member",
+    "AF04": "Already claimed today. Please try again tomorrow",
+    "PG01": "Game is disabled. Please try another pair",
+    "PS02": "Invalid inviter",
+    "DS01": "Minimum staking amount is 10k BET",
+    "DS03": "Distribution and Withdraw is allowed only on Calculation Time",
+    "DS06": "Insufficient funds to cover your bet. Please try again later",
+    "DS07": "No profit or loss to distribute",
+    "DS09": "Stake amount must be divisible by 2",
+    "DS04": "Stake and Withdraw is disabled on Calculation Time. Please try again later",
+    "DS08": "Unknown pool",
+    "DS10": "There was no distribution this cycle yet",
+    "DS11": "Withdraw not possible due undistributed profit or loss",
+    "DSP01": "Pool reached full capacity",
+    "CSP03": "Your stake has not ended yet",
+    "DSP02": "Staker is not a member of pool",
+    "RO03": "Insufficient funds to cover your bet. Please try again later",
+    "RO04": "Bet does not respect limits. See payout table",
+    "L01": "Invalid Staking Contract",
+    "L02": "Player Address Mismatch",
+    "L03": "Amount Mismatch",
+    "L04": "Round Mismatch",
+    "L05": "Bet amount is too small. Minimum is 1000",
+    "L06": "New Amount Out Of Range",
+    "L07": "Round Is Full",
+    "L08": "Round Already Distributed",
+    "L09": "Round Not Finished",
+    "L10": "Round Already Requested",
+    "L11": "Round Is Empty",
+    "L12": "Round Is Not Finished",
+    "ERC20: insufficient allowance": "Insufficient allowance",
+    "0xfb8f41b2": "Insufficient allowance",
+    "0xe450d38c": "Insufficient balance",
+    "unknown": "Unknown error happened",
+    "undefined": "Transaction failed"
   }
 }
