fixed link and uername in conenct button

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -90,8 +90,9 @@
     "DS10": "There was no distribution this cycle yet",
     "DS11": "Withdraw not possible due undistributed profit or loss",
     "DSP01": "Pool reached full capacity",
-    "CSP03": "Your stake has not ended yet",
     "DSP02": "Staker is not a member of pool",
+    "DSP06": "Pool has no tokens to distribute",
+    "CSP03": "Your stake has not ended yet",
     "RO03": "Insufficient funds to cover your bet. Please try again later",
     "RO04": "Bet does not respect limits. See payout table",
     "L01": "Invalid Staking Contract",
