fixed link to luro

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -19,7 +19,7 @@
     "dice": "Dice",
     "binary": "Binary Options",
     "roulette": "Roulette",
-    "lottery": "Lucky Round",
+    "luro": "Lucky Round",
     "poker": "Poker",
     "blackjack": "Blackjack",
     "stones": "Stones",
