--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -42,6 +42,7 @@
 			"conservative": {
 				"predict": "Crypto Predict",
 				"poker": "Poker",
+				"luro": "Lucky Round",
 				"gem-roulette": "Gem Roulette",
 				"info": {
 					"title": "Conservative Staking",
