added allownace modal

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,6 +1,12 @@
 {
 	"balance": "Available:",
 	"allowance": "Wallet balance:",
+	"allowanceModal": {
+		"type": {
+			"stake": "Stake",
+			"bet": "Bet"
+		}
+	},
 	"sidebar": {
 		"staking": "Staking",
 		"staking-conservative": "Conservative",
