add slider component

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -120,6 +120,7 @@
 		"0xfb8f41b2": "Insufficient allowance",
 		"0xe450d38c": "Insufficient balance",
 		"unknown": "Transaction cancelled",
-		"undefined": "Transaction failed"
+		"undefined": "Transaction failed",
+		"default": "Transaction failed"
 	}
 }
