updated langs and added switcher #50

--- a/src/translations/en/shared.json
+++ b/src/translations/en/shared.json
@@ -49,6 +49,7 @@
 		"legalDisclaimers": "Legal disclaimers"
 	},
 	"sidebar": {
+		"language": "Language",
 		"staking": "Staking",
 		"staking-conservative": "Conservative",
 		"staking-dynamic": "Dynamic",
