--- a/src/translations/ru/shared.json
+++ b/src/translations/ru/shared.json
@@ -5,7 +5,7 @@
 		"staking": "Стейкинг",
 		"staking-conservative": "Консервативный",
 		"staking-dynamic": "Динамический",
-		"affiliate": "Партнерская программа",
+		"affiliate": "Рефераллка",
 		"affiliate-linear-tree": "Линейное дерево",
 		"affiliate-binary-tree": "Бинарное дерево",
 		"roadmap": "Дорожная карта",
