--- a/src/translations/cz/shared.json
+++ b/src/translations/cz/shared.json
@@ -17,6 +17,7 @@
 		"affiliate-binary-tree": "Binarni strom",
 		"roadmap": "Roadmapa",
 		"documentation": "Dokumentace",
+		"stats": "Stats",
 		"media": "Media",
 		"contact": "Podpora",
 		"exchange": "koupit BET",
@@ -24,6 +25,7 @@
 		"predict": "Crypto Predict",
 		"sport": "Sport sazky",
 		"dice": "Dice",
+		"hilo": "Hi/Lo",
 		"binary": "Binarni Opce",
 		"roulette": "Ruleta",
 		"luro": "Stastne kolo",
