--- a/src/translations/en/shared.json
+++ b/src/translations/en/shared.json
@@ -23,7 +23,7 @@
 	"footer": {
 		"betfinIs": "Betfin is decentralized web3 application that allows anyone to bet or stake through trustless contracts. This website is only an interface of the web3 application and runs as a non profit public service.",
 		"allRightsReserved": "All right reserved",
-		"thisSiteIsAPartOf": "This site is part of BetFin decentralized ecosystem",
+		"thisSiteIsAPartOf": "This site is part of the BetFin decentralized ecosystem",
 		"verifyPartnerContract": "Verify partner contract",
 		"socials": "Socials",
 		"exchanges": "Exchanges",
@@ -58,6 +58,7 @@
 		"affiliate-binary-tree": "Binary tree",
 		"roadmap": "Roadmap",
 		"documentation": "Documentation",
+		"stats": "Stats",
 		"media": "Media",
 		"contact": "Contact Us",
 		"exchange": "Buy BET",
@@ -65,6 +66,7 @@
 		"predict": "Crypto Predict",
 		"sport": "Sport betting",
 		"dice": "Dice",
+		"hilo": "Hi/Lo",
 		"binary": "Binary Options",
 		"roulette": "Roulette",
 		"luro": "Lucky Round",
