--- a/src/translations/ru/shared.json
+++ b/src/translations/ru/shared.json
@@ -10,6 +10,7 @@
 		"affiliate-binary-tree": "Бинарное дерево",
 		"roadmap": "Дорожная карта",
 		"documentation": "Документация",
+		"stats": "Статистика",
 		"media": "Медиа",
 		"contact": "Связаться с нами",
 		"exchange": "Купить BET",
@@ -17,6 +18,7 @@
 		"predict": "Крипто Прогноз",
 		"sport": "Спортивные ставки",
 		"dice": "Кости",
+		"hilo": "Hi/Lo",
 		"binary": "Бинарные опционы",
 		"roulette": "Рулетка",
 		"lottery": "Счастливый раунд",
