bet color, link and text for statistics

--- a/src/translations/cz/shared.json
+++ b/src/translations/cz/shared.json
@@ -59,7 +59,7 @@
 		"affiliate-binary-tree": "Binární strom",
 		"roadmap": "Roadmapa",
 		"documentation": "Dokumentace",
-		"stats": "Stats",
+		"stats": "Statistiky",
 		"media": "Média",
 		"contact": "Kontaktujte nás",
 		"exchange": "Koupit BET",
