--- a/src/translations/en/shared.json
+++ b/src/translations/en/shared.json
@@ -59,7 +59,7 @@
 		"affiliate-binary-tree": "Binary tree",
 		"roadmap": "Roadmap",
 		"documentation": "Documentation",
-		"stats": "Stats",
+		"stats": "Statistics",
 		"media": "Media",
 		"contact": "Contact Us",
 		"exchange": "Buy BET",
