--- a/src/translations/cz/shared.json
+++ b/src/translations/cz/shared.json
@@ -195,7 +195,7 @@
 		"theValueRepresentsDirect": "Tato hodnota představuje <span>100% všech sázek</span> <br /> tvých <span>přímých</span> affiliate partnerů",
 		"theValueRepresentsBinary": "Tato hodnota představuje <span>1% všech sázek</span> <br /> v tvém <span>binárním</span> affiliate systému",
 		"inviteLink": "Pozvánkový odkaz",
-		"alowedSymbols": "Minimálně 3 symboly. Povolené:",
+		"allowedSymbols": "Minimálně 3 symboly. Povolené:",
 		"left": "Vlevo",
 		"right": "Vpravo",
 		"edit": "Upravit",
