#62 implement historical bets

--- a/src/translations/en/shared.json
+++ b/src/translations/en/shared.json
@@ -169,7 +169,8 @@
 	},
 	"gameBlock": {
 		"soon": "Soon",
-		"activeBets": "active bets"
+		"activeBets": "active bets",
+		"historicalBets": "last 24h bets"
 	},
 	"member": {
 		"memberProfile": "Member profile",
