add link to elections event to sidebar

--- a/src/translations/cz/shared.json
+++ b/src/translations/cz/shared.json
@@ -84,6 +84,7 @@
 		"poker": "Poker",
 		"blackjack": "Blackjack",
 		"stones": "Stones",
+		"elections": "Elections",
 		"slots": "Automaty",
 		"support": "Podpora",
 		"about": "O BET"
