--- a/src/translations/en/shared.json
+++ b/src/translations/en/shared.json
@@ -84,6 +84,7 @@
 		"poker": "Poker",
 		"blackjack": "Blackjack",
 		"stones": "Stones",
+		"elections": "Elections",
 		"slots": "Slots",
 		"support": "Support",
 		"about": "About BET"
