--- a/src/translations/ru/shared.json
+++ b/src/translations/ru/shared.json
@@ -25,6 +25,7 @@
 		"poker": "Покер",
 		"blackjack": "Блэкджек",
 		"stones": "Камни",
+		"elections": "Выборы",
 		"slots": "Слоты",
 		"support": "Поддержка",
 		"about": "BET токен"
